# pulse-desktop

./: README.md  index.html  package.json
Pulse/: package.json
Pulse/src-tauri/: Cargo.toml  tauri.conf.json
Pulse/src-tauri/capabilities/: default.json
Pulse/src-tauri/src/: lib.rs
docs/: plan.md
src/: main.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  models.rs
src-tauri/src/capabilities/: detect.rs  go.rs  java.rs  mod.rs  node.rs  python.rs  rust_cap.rs
src-tauri/src/commands/: a2.rs  apimap.rs  connectors.rs  context.rs  diagrams.rs  filebrowser.rs  health.rs  mod.rs  plugins.rs  processes.rs  projects.rs  runs.rs  search.rs  semantic.rs  snapshots.rs  watchers.rs  workspaces.rs
src-tauri/src/db/: mod.rs
src-tauri/src/runner/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/watcher/: debounce.rs  mod.rs
src/components/: ConfirmGate.vue  DependencyTable.vue  EnvParityDiff.vue  LogStream.vue  PortList.vue  ServiceCard.vue  Sidebar.vue  StatusBar.vue  TreeNode.vue
src/layouts/: MainLayout.vue
src/router/: index.ts
src/stores/: projects.ts  runs.ts
src/views/: A2View.vue  ApiMap.vue  ContextManager.vue  Diagrams.vue  FileBrowser.vue  HealthDashboard.vue  Plugins.vue  ProjectDashboard.vue  ProjectList.vue  RunCenter.vue  SearchView.vue  SemanticSearch.vue  Settings.vue  SnapshotDiff.vue  Workspaces.vue
